--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
+    "gsap": "^3.12.5",
+    "imagesloaded": "^5.0.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/imagesloaded": "^4.1.6",
     "@types/node": "^20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
