--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-icons": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
