--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,40 @@
 {
-  "extends": "next/core-web-vitals"
+   "parser": "@typescript-eslint/parser",
+   "parserOptions": {
+      "ecmaVersion": 2020,
+      "sourceType": "module",
+      "ecmaFeatures": {
+         "jsx": true,
+         "tsx": true
+      }
+   },
+   "settings": {
+      "react": {
+         "version": "detect"
+      }
+   },
+   "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended",
+      "next/core-web-vitals"
+   ],
+   "plugins": ["react", "@typescript-eslint", "prettier"],
+   "rules": {
+      "prettier/prettier": [
+         "error",
+         {
+            "semi": true,
+            "singleQuote": true,
+            "tabWidth": 3,
+            "trailingComma": "all",
+            "printWidth": 100
+         }
+      ],
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/no-explicit-any": "off"
+   }
 }
