--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
             "singleQuote": true,
             "tabWidth": 3,
             "trailingComma": "all",
-            "printWidth": 100
+            "printWidth": 100,
+            "endOfLine": "auto"
          }
       ],
       "react/react-in-jsx-scope": "off",
