--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 DATABASE_URL="mongodb+srv://tagryze:9Ao57rM33mOrrlHd@cluster0.q4gnhaw.mongodb.net/ph-festival-management"
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+NODE_ENV="development"
