move the redux provider into _app.tsx

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://tagryze:9Ao57rM33mOrrlHd@cluster0.q4gnhaw.mongodb.net/ph-festival-management"
+DATABASE_URL="mongodb+srv://tagryze:9Ao57rM33mOrrlHd@cluster0.q4gnhaw.mongodb.net/ph-festival-management?retryWrites=true&w=majority&appName=Cluster0"
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 NODE_ENV="development"
